# rules_nix

./: BUILD.bazel  WORKSPACE  defs.bzl  deps.bzl
example/: .bazelrc  BUILD.bazel  WORKSPACE  test_nix_build.nix
example/apriltags/: BUILD.bazel  apriltags.BUILD.bazel  default.nix
private/: BUILD.bazel  actions.bzl  nix_actions.py  rules.bzl  worker.bzl  worker.py  workspace.bzl
toolchains/: nix.bzl
