load("@rules_nix//:defs.bzl", "nix_cc")
load("@rules_nix//private:rules.bzl", "nix_deps_layer")

exports_files(
    ["default.nix"],
    visibility = ["//visibility:public"],
)

nix_cc(
    name = "apriltags",
    srcs = [],
    derivation = ":default.nix",
    nixpkgs = [
        "stdenv",
        "cmake",
        "pkg-config",
        "opencv4",
        "eigen",
        "fetchFromGitHub",
    ],
    out_shared_libs = [
        "libapriltags.so",
    ],
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    visibility = ["//visibility:public"],
    # deps = [
    #     "//third_party:opencv",
    #     "//third_party/eigen",
    # ],
)

nix_deps_layer(
    name = "apriltags_deps",
    visibility = ["//visibility:public"],
    deps = [":apriltags"],
)
