load("@rules_nix//:defs.bzl", "nix_cc")

# NOTE(danny): for bazel nix integration tests
exports_files(
    [
        "example/apriltags_demo.cpp",
        "example/Serial.cpp",
        "example/Serial.h",
    ],
    visibility = ["//tools/bazel_tools/test/nix:__pkg__"],
)

nix_cc(
    name = "apriltags",
    srcs = glob(
        ["**"],
        exclude = [
            "BUILD.bazel",
            "example/**",
        ],
    ),
    derivation = "@//apriltags:default.nix",
    nixpkgs = [
        "stdenv",
        "cmake",
        "pkg-config",
        "opencv4",
        "eigen",
        "fetchFromGitHub",
    ],
    out_shared_libs = [
        "libapriltags.so",
    ],
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    visibility = ["//visibility:public"],
    # deps = [
    #     "//third_party:opencv",
    #     "//third_party/eigen",
    # ],
)
